overlay/management/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
    - name: http
      port: 5556
      protocol: TCP
      targetPort: 5556
    - name: metrics
      port: 5558
      protocol: TCP
      targetPort: 5558
  selector:
    app: dex
